Fix name and title
Fixes #1

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
           <div class="padding">
             <img src="images/alastair.jpg" alt="Alastair Tye Samson" />
             <h3>
-              <a href="www.imdb.com/name/nm1403724/" target="_blank" class="imdb">Alastair Tye Samson</a>
+              <a href="www.imdb.com/name/nm1403724/" target="_blank">Alastair Tye Samson</a>
               <br/>
               <em>Finishing Artist</em>
             </h3>
