Fix services list
Fixes #3

--- a/src/index.html
+++ b/src/index.html
@@ -117,9 +117,7 @@
 
       <div class="padding">
 
-        <img src="images/couch.jpg" alt="" class="image" />
-
-        <ul>
+        <ul class="service-list">
           <li>Motion picture finishing</li>
           <ul>
             <li>Conforms with forensic DX check</li>
