Tidy up contact footer
Fixes #8

--- a/src/index.html
+++ b/src/index.html
@@ -221,11 +221,9 @@
 
       <div class="padding">
 
-        <p>
-          the finishing suite
-          <br/>
-          Level 2, 46 Brown Street, Ponsonby, Auckland, NEW ZEALAND 1021
-        </p>
+        <h2>The Finishing Suite</h2>
+
+        <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
 
       </div><!--/padding-->
 
