--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   </script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="menu">
 
   <div id="header">
     <div class="height">
@@ -61,10 +61,10 @@
           <a href="#services" class="scroll">Services</a>
         </li>
         <li>
-          <a href="#portfolio" class="scroll">Portfolio</a>
+          <a href="#gallery" class="scroll">Gallery</a>
         </li>
         <li>
-          <a href="#contact" class="scroll">Contact</a>
+          <a href="#footer" class="scroll">Contact</a>
         </li>
         <li>
           <a href="docs/tfs_deliverables.pdf" target="_blank">Deliverables</a>
