--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
           <a href="#services" class="scroll">Services</a>
         </li>
         <li>
-          <a href="#gallery" class="scroll">Gallery</a>
+          <a href="#portfolio" class="scroll">Portfilio</a>
         </li>
         <li>
           <a href="#footer" class="scroll">Contact</a>
@@ -160,7 +160,7 @@
 
   </div><!--/section-->
 
-  <div id="gallery">
+  <div id="portfolio">
 
     <div class="flexslider">
 
