Use logo in footer
Resolves #14

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       <div class="content">
         <div class="block">
           <div class="card">
-            <h1>the finishing suite</h1>
+            <h1>The Finishing Suite</h1>
             <ul class="social">
               <li class="facebook">
                 <a href="http://www.facebook.com/thefinishingsuite" target="_blank">Facebook</a>
