Add contact details to the footer
Map to come with #9

Fixes #15

--- a/src/index.html
+++ b/src/index.html
@@ -221,6 +221,10 @@
 
         <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
 
+        <p><a href="tel:006421369544">+64 21 369 544</a></p>
+
+        <p><a href="mailto:alastair@thefinishingsuite.co.nz">alastair@thefinishingsuite.co.nz</a></p>
+
       </div><!--/padding-->
 
     </div><!--/content-->
