Default mobile rebuild

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,7 @@
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
@@ -51,206 +50,172 @@
 
 <body data-spy="scroll" data-target="menu">
 
-  <div id="header">
-    <div class="height">
-      <div class="content">
-        <div class="block">
-          <div class="card">
-            <h1>The Finishing Suite</h1>
-            <ul class="social">
-              <li class="facebook">
-                <a href="http://www.facebook.com/thefinishingsuite" target="_blank">Facebook</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="menu">
-    <div id="nav">
-      <ul>
-        <li>
-          <a href="#about" class="scroll active">About</a>
-        </li>
-        <li>
-          <a href="#services" class="scroll">Services</a>
-        </li>
-        <li>
-          <a href="#portfolio" class="scroll">Portfilio</a>
-        </li>
-        <li>
-          <a href="#footer" class="scroll">Contact</a>
-        </li>
-        <li>
-          <a href="docs/tfs_deliverables.pdf" target="_blank">Deliverables</a>
+  <header class="header">
+    <div class="content">
+      <h1 class="tfs-logo">The Finishing Suite</h1>
+      <ul class="social">
+        <li class="facebook">
+          <a href="http://www.facebook.com/thefinishingsuite" target="_blank"><img src="images/facebook.png" alt="Facebook"/></a>
         </li>
       </ul>
     </div>
-  </div>
+  </header>
 
-  <div class="section" id="about">
+  <nav class="nav">
+    <ul>
+      <li>
+        <a href="#about" class="scroll active">About</a>
+      </li>
+      <li>
+        <a href="#services" class="scroll">Services</a>
+      </li>
+      <li>
+        <a href="#portfolio" class="scroll">Portfilio</a>
+      </li>
+      <li>
+        <a href="#footer" class="scroll">Contact</a>
+      </li>
+      <li>
+        <a href="docs/tfs_deliverables.pdf" target="_blank">Deliverables</a>
+      </li>
+    </ul>
+  </nav>
 
-    <div class="content">
+  <section class="about">
+    <h2>About</h2>
 
-      <h2>About</h2>
+    <p class="featured">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
+    <p>Here, your work won't be forced through a cookie-cutter pipeline. Meeting technical specifications should be a given, not the end game — I'm passionate about using the finishing process to tastefully enhance your storytelling.</p>
+    <p>The Finishing Suite is conveniently right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
 
-      <div class="padding">
+    <a href="www.imdb.com/name/nm1403724/" target="_blank">
+      <img class="img--round" src="images/alastair.jpg" alt="Alastair Tye Samson" />
+      <h2>
+        Alastair Tye Samson
+        <small>Finishing Artist</small>
+      </h2>
+    </a>
 
-        <p class="featured">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
-        <p>Here, your work won't be forced through a cookie-cutter pipeline. Meeting technical specifications should be a given, not the end game — I'm passionate about using the finishing process to tastefully enhance your storytelling.</p>
-        <p>The Finishing Suite is conveniently right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
+    <p>For fifteen years I have worked as an Online Editor, Colourist, and all-round motion picture finishing nerd.</p>
+    <p>I offer inspiration and experience using Da Vinci Resolve, Autodesk Smoke, and Avid Media Composer to finesse films, television shows, music videos and TVCs to be more awesome. I am fast and meticulous with an up-to-date knowledge of technology and a strong creative eye.</p>            
+    <p>Over my 20 years experience in the screen industries I have worked with many high profile companies such as Weta Digital, Eyeworks Touchdown, Images&Sound, South Pacific Pictures, NHNZ and heaps of others.</p>
+    <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
+  </section>
 
-        <div class="crew">
-          <img src="images/alastair.jpg" alt="Alastair Tye Samson" />
-          <h3>
-            <a href="www.imdb.com/name/nm1403724/" target="_blank">Alastair Tye Samson</a>
-            <br/>
-            <em>Finishing Artist</em>
-          </h3>
+  <section class="services">
+    <h2>Services</h2>
 
-          <p>For fifteen years I have worked as an Online Editor, Colourist, and all-round motion picture finishing nerd.</p>
-          <p>I offer inspiration and experience using Da Vinci Resolve, Autodesk Smoke, and Avid Media Composer to finesse films, television shows, music videos and TVCs to be more awesome. I am fast and meticulous with an up-to-date knowledge of technology and a strong creative eye.</p>            
-          <p>Over my 20 years experience in the screen industries I have worked with many high profile companies such as Weta Digital, Eyeworks Touchdown, Images&Sound, South Pacific Pictures, NHNZ and heaps of others.</p>
-          <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
-        </div><!--/crew-->
-
-      </div><!--/padding-->
-
-    </div><!--/content-->
-
-  </div><!--/section-->
-
-  <div class="section" id="services">
-
-    <div class="content">
-
-      <h2>Services</h2>
-
-      <div class="padding">
-
-        <ul class="service-list">
-          <li>Motion picture finishing</li>
-          <ul>
-            <li>Conforms with forensic DX check</li>
-            <li>Colour grading</li>
-            <li>Image restoration</li>
-            <ul>
-              <li>Stabilisation</li>
-              <li>Flicker fixing</li>
-              <li>Smoothing exposure pops</li>
-              <li>Removing dead pixels</li>
-            </ul>
-            <li>Beauty work and digital make-up</li>
-            <li>Removing unwanted objects</li>
-            <li>Title design</li>
-            <li>End credits</li>
-            <li>Mastering</li>
-            <li>Tech check</li>
-          </ul>
-          <br>
-          <li>Offline</li>
-          <ul>
-            <li>Editing TVCs and trailers</li>
-          </ul>
-          <br>
-          <li>Dry hire</li>
-          <ul>
-            <li>Client facing suite available for short and long term dry hire</li>
-          </ul>
-          <br>
-          <li>Client services</li>
-          <ul>
-            <li>High speed 1300 Mbps client WiFi</li>
-            <li>200 Mbps down/200 Mbps up fibre internet</li>
-            <li>Dedicated power for laptop and phone charging</li>
-            <li>Fully stocked bar fridge</li>
-            <li>Food, drink, and concierge services available on request</li>
-            <li>PlayStation 4 with PSVR</li>
-          </ul>
+    <ul class="service-list">
+      <li>Motion picture finishing</li>
+      <ul>
+        <li>Conforms with forensic DX check</li>
+        <li>Colour grading</li>
+        <li>Image restoration</li>
+        <ul>
+          <li>Stabilisation</li>
+          <li>Flicker fixing</li>
+          <li>Smoothing exposure pops</li>
+          <li>Removing dead pixels</li>
         </ul>
+        <li>Beauty work and digital make-up</li>
+        <li>Removing unwanted objects</li>
+        <li>Title design</li>
+        <li>End credits</li>
+        <li>Mastering</li>
+        <li>Tech check</li>
+      </ul>
+      <br>
+      <li>Offline</li>
+      <ul>
+        <li>Editing TVCs and trailers</li>
+      </ul>
+      <br>
+      <li>Dry hire</li>
+      <ul>
+        <li>Client facing suite available for short and long term dry hire</li>
+      </ul>
+      <br>
+      <li>Client services</li>
+      <ul>
+        <li>High speed 1300 Mbps client WiFi</li>
+        <li>200 Mbps down/200 Mbps up fibre internet</li>
+        <li>Dedicated power for laptop and phone charging</li>
+        <li>Fully stocked bar fridge</li>
+        <li>Food, drink, and concierge services available on request</li>
+        <li>PlayStation 4 with PSVR</li>
+      </ul>
+    </ul>
 
-      </div><!--/padding-->
+  </section>
 
-    </div><!--/content-->
+  <section class="portfolio">
 
-  </div><!--/section-->
-
-  <div id="portfolio">
+    <h2>Portfolio</h2>
 
     <div class="flexslider">
 
       <ul class="slides" title="Click for high resolution image">
         <li>
-          <a href="images/large/slide1.jpg" target="_blank">
-            <img src="images/slide1.jpg" alt="" />
+          <a href="images/slides/large/slide1.jpg" target="_blank">
+            <img src="images/slides/slide1.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide2.jpg" target="_blank">
-            <img src="images/slide2.jpg" alt="" />
+          <a href="images/slides/large/slide2.jpg" target="_blank">
+            <img src="images/slides/slide2.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide3.jpg" target="_blank">
-            <img src="images/slide3.jpg" alt="" />
+          <a href="images/slides/large/slide3.jpg" target="_blank">
+            <img src="images/slides/slide3.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide4.jpg" target="_blank">
-            <img src="images/slide4.jpg" alt="" />
+          <a href="images/slides/large/slide4.jpg" target="_blank">
+            <img src="images/slides/slide4.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide5.jpg" target="_blank">
-            <img src="images/slide5.jpg" alt="" />
+          <a href="images/slides/large/slide5.jpg" target="_blank">
+            <img src="images/slides/slide5.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide6.jpg" target="_blank">
-            <img src="images/slide6.jpg" alt="" />
+          <a href="images/slides/large/slide6.jpg" target="_blank">
+            <img src="images/slides/slide6.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide7.jpg" target="_blank">
-            <img src="images/slide7.jpg" alt="" />
+          <a href="images/slides/large/slide7.jpg" target="_blank">
+            <img src="images/slides/slide7.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/large/slide8.jpg" target="_blank">
-            <img src="images/slide8.jpg" alt="" />
+          <a href="images/slides/large/slide8.jpg" target="_blank">
+            <img src="images/slides/slide8.jpg" alt="" />
           </a>
         </li>
       </ul>
 
     </div><!--/flexslider-->
 
-  </div><!--/gallery-->
+  </section>
 
-  <div id="footer">
+  <footer class="footer">
 
-    <div class="content">
+    <h2 class="tfs-logo">The Finishing Suite</h2>
 
-      <div class="padding">
+    <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
 
-        <h2>The Finishing Suite</h2>
+    <p>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4180371250673!2d174.74096085191576!3d-36.856411479838606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4797713c1391%3A0xea30eedea767cc07!2s46+Brown+St%2C+Ponsonby%2C+Auckland+1021!5e0!3m2!1sen!2snz!4v1517981813511" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </p>
 
-        <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
+    <p><a href="tel:006421369544">+64 21 369 544</a></p>
 
-        <p>
-          <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4180371250673!2d174.74096085191576!3d-36.856411479838606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4797713c1391%3A0xea30eedea767cc07!2s46+Brown+St%2C+Ponsonby%2C+Auckland+1021!5e0!3m2!1sen!2snz!4v1517981813511" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </p>
+    <p><a href="mailto:alastair@thefinishingsuite.co.nz">alastair@thefinishingsuite.co.nz</a></p>
 
-        <p><a href="tel:006421369544">+64 21 369 544</a></p>
-
-        <p><a href="mailto:alastair@thefinishingsuite.co.nz">alastair@thefinishingsuite.co.nz</a></p>
-
-      </div><!--/padding-->
-
-    </div><!--/content-->
-
-  </div><!--/footer-->
+  </footer>
 
 </body>
 </html>
