--- a/src/index.html
+++ b/src/index.html
@@ -61,27 +61,17 @@
     </div>
   </header>
 
-  <nav class="nav">
-    <ul>
-      <li>
-        <a href="#about" class="scroll active">About</a>
-      </li>
-      <li>
-        <a href="#services" class="scroll">Services</a>
-      </li>
-      <li>
-        <a href="#portfolio" class="scroll">Portfilio</a>
-      </li>
-      <li>
-        <a href="#footer" class="scroll">Contact</a>
-      </li>
-      <li>
-        <a href="docs/tfs_deliverables.pdf" target="_blank">Deliverables</a>
-      </li>
-    </ul>
-  </nav>
+  <div id="menu">
+    <nav class="nav" id="nav">
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#portfolio">Portfilio</a>
+      <a href="#footer">Contact</a>
+      <a href="docs/tfs_deliverables.pdf" target="_blank">Deliverables</a>
+    </nav>
+  </div>
 
-  <section class="about">
+  <section class="about" id="about">
     <h2>About</h2>
 
     <p class="featured">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
@@ -102,7 +92,7 @@
     <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
   </section>
 
-  <section class="services">
+  <section class="services" id="services">
     <h2>Services</h2>
 
     <ul class="service-list">
@@ -148,7 +138,7 @@
 
   </section>
 
-  <section class="portfolio">
+  <section class="portfolio" id="portfolio">
 
     <h2>Portfolio</h2>
 
@@ -201,7 +191,7 @@
 
   </section>
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
 
     <h2 class="tfs-logo">The Finishing Suite</h2>
 
