Change map to The Finishing Suite
Resolves #9

--- a/src/index.html
+++ b/src/index.html
@@ -206,7 +206,7 @@
     <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
 
     <p>
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4180371250673!2d174.74096085191576!3d-36.856411479838606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4797713c1391%3A0xea30eedea767cc07!2s46+Brown+St%2C+Ponsonby%2C+Auckland+1021!5e0!3m2!1sen!2snz!4v1517981813511" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4181955181575!2d174.7409663160291!3d-36.856407687642005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d479772f8e0e9%3A0x205db67f888dcc6c!2sThe+Finishing+Suite!5e0!3m2!1sen!2snz!4v1518075728043" frameborder="0" style="border:0" allowfullscreen></iframe>
     </p>
 
   </footer>
