--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,12 @@
   <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn:400italic,400" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+  <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/jquery.height.js"></script>
   <script type="text/javascript" src="js/jquery.scroll.js"></script>
   <script type="text/javascript" src="js/jquery.stuck.js"></script>
-  <script type="text/javascript" src="js/jquery.flexslider.js"></script>
+  <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
   <script type="text/javascript">
     $(window).load(function () {
       $('.flexslider').flexslider();
@@ -147,43 +148,16 @@
       <ul class="slides" title="Click for high resolution image">
         <li>
           <a href="images/slides/large/slide1.jpg" target="_blank">
-            <img src="images/slides/slide1.jpg" alt="" />
+            <img class="flext-item" src="images/slides/slide1.jpg" alt="" />
           </a>
         </li>
         <li>
           <a href="images/slides/large/slide2.jpg" target="_blank">
-            <img src="images/slides/slide2.jpg" alt="" />
+            <img class="flex-item" src="images/slides/slide2.jpg" alt="" />
           </a>
         </li>
         <li>
-          <a href="images/slides/large/slide3.jpg" target="_blank">
-            <img src="images/slides/slide3.jpg" alt="" />
-          </a>
-        </li>
-        <li>
-          <a href="images/slides/large/slide4.jpg" target="_blank">
-            <img src="images/slides/slide4.jpg" alt="" />
-          </a>
-        </li>
-        <li>
-          <a href="images/slides/large/slide5.jpg" target="_blank">
-            <img src="images/slides/slide5.jpg" alt="" />
-          </a>
-        </li>
-        <li>
-          <a href="images/slides/large/slide6.jpg" target="_blank">
-            <img src="images/slides/slide6.jpg" alt="" />
-          </a>
-        </li>
-        <li>
-          <a href="images/slides/large/slide7.jpg" target="_blank">
-            <img src="images/slides/slide7.jpg" alt="" />
-          </a>
-        </li>
-        <li>
-          <a href="images/slides/large/slide8.jpg" target="_blank">
-            <img src="images/slides/slide8.jpg" alt="" />
-          </a>
+          <iframe class="flex-item" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </li>
       </ul>
 
