Nav control position

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,7 @@
   <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
   <script type="text/javascript">
     $(window).load(function () {
-      $('.flexslider').flexslider({
-        slideshow: false
-      });
+      $('.flexslider').flexslider();
     });
   </script>
 </head>
