--- a/src/index.html
+++ b/src/index.html
@@ -178,10 +178,175 @@
             </div>
           </a>
         </li>
+
         <li>
-          <a href="images/slides/large/slide2.jpg" target="_blank">
-            <img src="images/slides/slide2.jpg" alt="" />
+          <img class="slide-image" src="images/slides/hyundai_master_content.jpg" alt="Hyundai Master Content Packages" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>Hyundai</h4>
+            <p>Master Content Packages</p>
+            <dl>
+              <dt>Edit, Online, VFX, Colour Grade</dt>
+              <dd>The Finishing Suite</dd>
+              
+              <dt>Editor & Finishing Artist</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Shine</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <a href="https://www.youtube.com/watch?v=RDqPPi2yblM" target="_blank">
+            <img class="slide-image" src="images/slides/forensics.jpg" alt="Forensics" />
+            <div class="slide-text">
+              <div class="slide-text-bg"></div>
+              <h4>Forensics</h4>
+              <p>Season 1</p>
+              <dl>
+                <dt>Online, Colour Grade</dt>
+                <dd>The Finishing Suite</dd>
+                
+                <dt>Finishing Artist</dt>
+                <dd class="m-b">Alastair Tye Samson</dd>
+
+                <dt>Client</dt>
+                <dd>South Pacific Pictures</dd>
+              </dl>
+            </div>
           </a>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/abcs_of_death.gif" alt="The ABC's of Death" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>The ABC's of Death</h4>
+            <p>End Credits</p>
+            <dl>              
+              <dt>End Credits Title Design</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Magnet Releasing &amp; Drafthouse Films &amp; Timpson Films</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/lion_queen.jpg" alt="The Lion Queen" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>The Lion Queen</h4>
+            <p>Seasons 1 &amp; 2</p>
+            <dl>              
+              <dt>Online & Colour Grading</dt>
+              <dd>The Finishing Suite</dd>
+
+              <dt>Finishing Artist</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Top Shelf Productions &amp; Clawed Hat Productions</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/meadow_fresh.jpg" alt="Meadow Fresh Barista" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>Meadow Fresh</h4>
+            <p>Barista</p>
+            <dl>              
+              <dt>Edit, Online, VFX & Colour Grade</dt>
+              <dd>The Finishing Suite</dd>
+
+              <dt>Editor & Finishing Artist</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Shine</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/ybitr.jpg" alt="You're Back in the Room" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>You're Back in the Room</h4>
+            <p>Season 1</p>
+            <dl>              
+              <dt>Online & Colour Grading</dt>
+              <dd>The Finishing Suite</dd>
+
+              <dt>Finishing Artist</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Screentime New Zealand</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/glad.jpg" alt="Glad 50 Years" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>Glad</h4>
+            <p>50 Years</p>
+            <dl>              
+              <dt>Online, VFX & Colour Grade</dt>
+              <dd>The Finishing Suite</dd>
+
+              <dt>Finishing Artist</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>MAD Content</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/wild_animal_rescue.jpg" alt="Wild Animal Rescue" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>Wild Animal Rescue</h4>
+            <p>Season 1</p>
+            <dl>              
+              <dt>Online & Colour Grade</dt>
+              <dd>The Finishing Suite</dd>
+
+              <dt>Finishing Artist</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Top Shelf Productions &amp; Clawed Hat Productions</dd>
+            </dl>
+          </div>
+        </li>
+
+        <li>
+          <img class="slide-image" src="images/slides/prouds_something_new.jpg" alt="Prouds Something New" />
+          <div class="slide-text">
+            <div class="slide-text-bg"></div>
+            <h4>Prouds</h4>
+            <p>Something New</p>
+            <dl>
+              <dt>Editor</dt>
+              <dd class="m-b">Alastair Tye Samson</dd>
+
+              <dt>Client</dt>
+              <dd>Video Parlour</dd>
+
+              <dt>Online & Grade</dt>
+              <dd>Images&Sound</dd>
+            </dl>
+          </div>
         </li>
       </ul>
 
