--- a/src/index.html
+++ b/src/index.html
@@ -331,22 +331,24 @@
         </li>
 
         <li>
-          <img class="slide-image" src="images/slides/prouds_something_new.jpg" alt="Prouds Something New" />
-          <div class="slide-text">
-            <div class="slide-text-bg"></div>
-            <h4>Prouds</h4>
-            <p>Something New</p>
-            <dl>
-              <dt>Editor</dt>
-              <dd class="m-b">Alastair Tye Samson</dd>
+          <a href="https://www.youtube.com/watch?v=WAbL7ozWQCM" target="_blank">
+            <img class="slide-image" src="images/slides/prouds_something_new.jpg" alt="Prouds Something New" />
+            <div class="slide-text">
+              <div class="slide-text-bg"></div>
+              <h4>Prouds</h4>
+              <p>Something New</p>
+              <dl>
+                <dt>Editor</dt>
+                <dd class="m-b">Alastair Tye Samson</dd>
 
-              <dt>Client</dt>
-              <dd>Video Parlour</dd>
+                <dt>Client</dt>
+                <dd>Video Parlour</dd>
 
-              <dt>Online & Grade</dt>
-              <dd>Images&Sound</dd>
-            </dl>
-          </div>
+                <dt>Online & Grade</dt>
+                <dd>Images&Sound</dd>
+              </dl>
+            </div>
+          </a>
         </li>
       </ul>
 
