--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         $bg.css('background-image', `url(${src})`);
       });
       $('.flexslider').flexslider({
-        slideshow: false
+        slideshow: true
       });
     });
   </script>
