--- a/src/index.html
+++ b/src/index.html
@@ -72,24 +72,26 @@
   </div>
 
   <section class="about" id="about">
-    <h2>About</h2>
+    <div class="content">
+      <h2>About</h2>
 
-    <p class="featured">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
-    <p>Here, your work won't be forced through a cookie-cutter pipeline. Meeting technical specifications should be a given, not the end game — I'm passionate about using the finishing process to tastefully enhance your storytelling.</p>
-    <p>The Finishing Suite is conveniently right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
+      <p class="featured">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
+      <p>Here, your work won't be forced through a cookie-cutter pipeline. Meeting technical specifications should be a given, not the end game — I'm passionate about using the finishing process to tastefully enhance your storytelling.</p>
+      <p>The Finishing Suite is conveniently right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
 
-    <a href="www.imdb.com/name/nm1403724/" target="_blank">
-      <img class="img--round" src="images/alastair.jpg" alt="Alastair Tye Samson" />
-      <h2>
-        Alastair Tye Samson
-        <small>Finishing Artist</small>
-      </h2>
-    </a>
+      <a href="www.imdb.com/name/nm1403724/" target="_blank">
+        <img class="img--round" src="images/alastair.jpg" alt="Alastair Tye Samson" />
+        <h2>
+          Alastair Tye Samson
+          <small>Finishing Artist</small>
+        </h2>
+      </a>
 
-    <p>For fifteen years I have worked as an Online Editor, Colourist, and all-round motion picture finishing nerd.</p>
-    <p>I offer inspiration and experience using Da Vinci Resolve, Autodesk Smoke, and Avid Media Composer to finesse films, television shows, music videos and TVCs to be more awesome. I am fast and meticulous with an up-to-date knowledge of technology and a strong creative eye.</p>            
-    <p>Over my 20 years experience in the screen industries I have worked with many high profile companies such as Weta Digital, Eyeworks Touchdown, Images&Sound, South Pacific Pictures, NHNZ and heaps of others.</p>
-    <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
+      <p>For fifteen years I have worked as an Online Editor, Colourist, and all-round motion picture finishing nerd.</p>
+      <p>I offer inspiration and experience using Da Vinci Resolve, Autodesk Smoke, and Avid Media Composer to finesse films, television shows, music videos and TVCs to be more awesome. I am fast and meticulous with an up-to-date knowledge of technology and a strong creative eye.</p>            
+      <p>Over my 20 years experience in the screen industries I have worked with many high profile companies such as Weta Digital, Eyeworks Touchdown, Images&Sound, South Pacific Pictures, NHNZ and heaps of others.</p>
+      <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
+    </div>
   </section>
 
   <section class="services" id="services">
