Improve contact section fit

--- a/src/index.html
+++ b/src/index.html
@@ -362,19 +362,21 @@
 
     <h2>Contact</h2>
 
-    <h2 class="tfs-logo">The Finishing Suite</h2>
+    <div class="content">
+      <h3 class="tfs-logo">The Finishing Suite</h3>
 
-    <p class="footer-links">
-      <a href="mailto:alastair@thefinishingsuite.co.nz">alastair@thefinishingsuite.co.nz</a>
-      <a href="tel:006421369544">+64 21 369 544</a>
-      <a href="http://www.facebook.com/thefinishingsuite" target="_blank">facebook.com/thefinishingsuite</a>
-    </p>
+      <p class="footer-links">
+        <a href="mailto:alastair@thefinishingsuite.co.nz">alastair@thefinishingsuite.co.nz</a>
+        <a href="tel:006421369544">+64 21 369 544</a>
+        <a href="http://www.facebook.com/thefinishingsuite" target="_blank">facebook.com/thefinishingsuite</a>
+      </p>
 
-    <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
+      <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
 
-    <p>
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4181955181575!2d174.7409663160291!3d-36.856407687642005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d479772f8e0e9%3A0x205db67f888dcc6c!2sThe+Finishing+Suite!5e0!3m2!1sen!2snz!4v1518075728043" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </p>
+      <p>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4181955181575!2d174.7409663160291!3d-36.856407687642005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d479772f8e0e9%3A0x205db67f888dcc6c!2sThe+Finishing+Suite!5e0!3m2!1sen!2snz!4v1518075728043" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </p>
+    </div>
 
   </footer>
 
