--- a/src/index.html
+++ b/src/index.html
@@ -366,7 +366,7 @@
       <h3 class="tfs-logo">The Finishing Suite</h3>
 
       <p class="footer-links">
-        <a href="mailto:alastair@thefinishingsuite.co.nz">alastair@thefinishingsuite.co.nz</a>
+        <a href='m&#97;ilt&#111;&#58;&#37;6&#49;la&#115;%&#55;4a%69r&#64;t&#104;ef%69nis&#104;in&#103;su&#105;&#37;&#55;4&#37;&#54;5&#46;co&#46;n%&#55;A'>alastair&#64;t&#104;ef&#105;&#110;ishing&#115;&#117;&#105;te&#46;co&#46;&#110;z</a>
         <a href="tel:006421369544">+64 21 369 544</a>
         <a href="http://www.facebook.com/thefinishingsuite" target="_blank">facebook.com/thefinishingsuite</a>
       </p>
