--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
       <a href="#services">Services</a>
       <a href="#portfolio">Portfilio</a>
       <a href="#footer">Contact</a>
-      <a href="docs/tfs_deliverables.pdf" target="_blank">Deliverables</a>
+      <a href="docs/tfs_requirements_for_delivery.pdf" target="_blank">Deliverables</a>
     </nav>
   </div>
 
