--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
     <nav class="nav" id="nav">
       <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#portfolio">Portfilio</a>
+      <a href="#portfolio">Portfolio</a>
       <a href="#footer">Contact</a>
       <a href="docs/tfs_requirements_for_delivery.pdf" target="_blank">Deliverables</a>
     </nav>
@@ -129,12 +129,16 @@
       <br>
       <li>Offline</li>
       <ul>
-        <li>Editing TVCs and trailers</li>
+        <li>Editing TVCs</li>
+        <li>Trailer production</li>
       </ul>
       <br>
       <li>Dry hire</li>
       <ul>
         <li>Client facing suite available for short and long term dry hire</li>
+        <li>Da Vinci Resolve Studio</li>
+        <li>Avid Media Composer with Symphony</li>
+        <li>Adobe Creative Cloud</li>
       </ul>
       <br>
       <li>Client services</li>
@@ -144,7 +148,6 @@
         <li>Dedicated power for laptop and phone charging</li>
         <li>Fully stocked bar fridge</li>
         <li>Food, drink, and concierge services available on request</li>
-        <li>PlayStation 4 with PSVR</li>
       </ul>
     </ul>
 
